# autotidy

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  TODO.md  testfile.txt  tidy.cpp
coreutils/: CMakeLists.txt  file.h  file.test.cpp  format.cpp  format.h  log.cpp  log.h  path.h  path.test.cpp  split.h  utils.h
src/: autotidy.cpp  autotidy.h  main.cpp  makedoc.cpp  manpages.cpp  patched_file.h  patched_file.test.cpp  path.h  replacer.h  testcode.cpp  tidy.cpp  utils.h
